--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ repositories {
 dependencies {
     implementation 'org.apache.groovy:groovy:4.0.2'
     implementation 'com.mysql:mysql-connector-j:8.0.33'
+    implementation 'org.codehaus.groovy:groovy-all:2.4.21'
 
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
